--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://raseminiano00.github.io/personal-portfolio",
+  "homepage": "https://matalotegary.github.io/my-react-project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
