--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-portfolio",
+  "name": "my-react-project",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://matalotegary.github.io/my-react-project",
